src/D3D12RaytracingProceduralGeometry/obj/x64/Debug/D3D12RaytracingProceduralGeometry.log
Photontracing.hlsl(51,47): error G1A4676F8: no member named 'position' in 'Photon'
      int photonIndex = GetPhotonSpatialIndex(p.position);
                                              ~ ^
Photontracing.hlsl(462,38): warning GBFFABD58: implicit truncation of vector type
              Photon p = {throughput * phongColor * abs(dot(triangleNormal, normalize(g_sceneCB.lightPosition.xyz - hitPosition))), hitPosition, -rayPayload.direction, 0};
                                       ^
Photontracing.hlsl(462,24): error GE0BD9442: too many elements in vector initialization (expected 4 elements, have 10)
              Photon p = {throughput * phongColor * abs(dot(triangleNormal, normalize(g_sceneCB.lightPosition.xyz - hitPosition))), hitPosition, -rayPayload.direction, 0};
                         ^
Photontracing.hlsl(463,20): error GBBEA2599: redefinition of 'p'
              Photon p = {throughput * phongColor * abs(dot(triangleNormal, normalize(g_sceneCB.lightPosition.xyz - hitPosition))), 0};
                     ^
  Photontracing.hlsl:462:20: note: previous definition is here
              Photon p = {throughput * phongColor * abs(dot(triangleNormal, normalize(g_sceneCB.lightPosition.xyz - hitPosition))), hitPosition, -rayPayload.direction, 0};
                     ^
Photontracing.hlsl(463,38): warning GBFFABD58: implicit truncation of vector type
              Photon p = {throughput * phongColor * abs(dot(triangleNormal, normalize(g_sceneCB.lightPosition.xyz - hitPosition))), 0};
                                       ^
Photontracing.hlsl(545,38): warning GBFFABD58: implicit truncation of vector type
              Photon p = {throughput * phongColor * abs(dot(attr.normal, normalize(g_sceneCB.lightPosition.xyz - hitPosition))), hitPosition, -rayPayload.direction, 0};
                                       ^
Photontracing.hlsl(545,24): error GE0BD9442: too many elements in vector initialization (expected 4 elements, have 10)
              Photon p = {throughput * phongColor * abs(dot(attr.normal, normalize(g_sceneCB.lightPosition.xyz - hitPosition))), hitPosition, -rayPayload.direction, 0};
                         ^
FXC : warning : no output provided for debug - embedding PDB in shader container.  Use -Qembed_debug to silence this warning.
  
